Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7234

recovery-small 105 test failed recovery-small test_105: @@@@@@ FAIL: MGS IR state must be partial

Details

    • Bug
    • Resolution: Fixed
    • Major
    • Lustre 2.9.0
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

    Description

      How to Reproduce : This issue has been recreated using one server and two clients with below configurations.
      FSNAME=lustre-1 DIR=/mnt/lustre-1 ONLY=105 sh recovery-small.sh

      == recovery-small test 105: IR: NON IR clients support == 14:12:58 (1443602578)
      mgs.MGS.ir_timeout
      Stopping client 10.201.46.101 /mnt/lustre-1 (opts
      pdsh@rpecl-1: 10.201.46.101: ssh exited with exit code 1
      Starting client: 10.201.46.101: -o user_xattr,flock,noir 10.201.46.100@tcp:/lustre-1 /mnt/lustre-1
      1+0 records in
      1+0 records out
      1048576 bytes (1.0 MB) copied, 0.0392535 s, 26.7 MB/s
      recovery-small test_105: @@@@@@ FAIL: MGS IR state must be partial
      Trace dump:
      = /home/rajesh/code/lustre-wc-rel/lustre/tests/test-framework.sh:4748:error_noexit()
      = /home/rajesh/code/lustre-wc-rel/lustre/tests/test-framework.sh:4779:error()
      = /home/rajesh/code/lustre-wc-rel/lustre/tests/recovery-small.sh:1727:test_105()
      = /home/rajesh/code/lustre-wc-rel/lustre/tests/test-framework.sh:5026:run_one()
      = /home/rajesh/code/lustre-wc-rel/lustre/tests/test-framework.sh:5063:run_one_logged()
      = /home/rajesh/code/lustre-wc-rel/lustre/tests/test-framework.sh:4880:run_test()
      = /home/rajesh/code/lustre-wc-rel/lustre/tests/recovery-small.sh:1750:main()
      Dumping lctl log to /tmp/test_logs/2015-09-30/141233/recovery-small.test_105.*.1443602579.log

      Attachments

        Activity

          [LU-7234] recovery-small 105 test failed recovery-small test_105: @@@@@@ FAIL: MGS IR state must be partial

          Patch landed to master for 2.9.0

          jgmitter Joseph Gmitter (Inactive) added a comment - Patch landed to master for 2.9.0

          Oleg Drokin (oleg.drokin@intel.com) merged in patch http://review.whamcloud.com/16901/
          Subject: LU-7234 mgs: For handling dash in FSNAME
          Project: fs/lustre-release
          Branch: master
          Current Patch Set:
          Commit: 52d4d48ae9e76fa5ff514b98f62049b446ef0b66

          gerrit Gerrit Updater added a comment - Oleg Drokin (oleg.drokin@intel.com) merged in patch http://review.whamcloud.com/16901/ Subject: LU-7234 mgs: For handling dash in FSNAME Project: fs/lustre-release Branch: master Current Patch Set: Commit: 52d4d48ae9e76fa5ff514b98f62049b446ef0b66

          Hi,

          The following comment is given by maloo,

          Patch Set 1:
          Tests received by maloo, run on el6.7/x86_64: (https://testing.hpdd.intel.com/test_sessions/ed923ff6-7984-11e5-a82c-5254006e85c2). Ran 1 tests. 1 tests failed: node-provisioning-1.

          for the uploaded patch and the occuring failure doesn't seem to be related to recovery-small test_105.

          sundarraj.illindra Sundarraj Illindra (Inactive) added a comment - - edited Hi, The following comment is given by maloo, Patch Set 1: Tests received by maloo, run on el6.7/x86_64: ( https://testing.hpdd.intel.com/test_sessions/ed923ff6-7984-11e5-a82c-5254006e85c2 ). Ran 1 tests. 1 tests failed: node-provisioning-1. for the uploaded patch and the occuring failure doesn't seem to be related to recovery-small test_105.

          Sundarraj Illindra (sundarraj.illindra@seagate.com) uploaded a new patch: http://review.whamcloud.com/16901
          Subject: LU-7234 mgs: For handling dash in FSNAME
          Project: fs/lustre-release
          Branch: master
          Current Patch Set: 1
          Commit: e271087defa19703b93fd3af6a3ce1aa9b7d6daf

          gerrit Gerrit Updater added a comment - Sundarraj Illindra (sundarraj.illindra@seagate.com) uploaded a new patch: http://review.whamcloud.com/16901 Subject: LU-7234 mgs: For handling dash in FSNAME Project: fs/lustre-release Branch: master Current Patch Set: 1 Commit: e271087defa19703b93fd3af6a3ce1aa9b7d6daf

          The fix for this bug (LU-7234) is under review in Seagate Bug Id MRP-2790, once the review completes we will land the fix here.

          rajeshtg Rajesh T G (Inactive) added a comment - The fix for this bug ( LU-7234 ) is under review in Seagate Bug Id MRP-2790, once the review completes we will land the fix here.

          People

            yujian Jian Yu
            rajeshtg Rajesh T G (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: