LU-7234 mgs: For handling dash in FSNAME

For FSNAME 'lustre-1, function mgs_llog_open() in mgs_handler.c has
been modified to call strrchr instead of strchr so that 'logname'
variable is updated with entire FSNAME including '-'.

Seagate-bug-id: MRP-2790
Signed-off-by: Sundarraj Illindra <sundarraj.illindra@seagate.com>
Change-Id: I07b2b874f4cf881d0aa2c07586a113fcce8bebfe
Reviewed-on: http://review.whamcloud.com/16901
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>